[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-llm-agent"
version = "0.1.0"
description = "A lightweight multimodal LLM agent demo with CLIP, ChatGLM, Streamlit and tool routing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "transformers",
  "pillow",
  "requests",
  "streamlit",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.setuptools]
py-modules = [
  "main",
  "chatglm_module",
  "streamlit_app",
  "tool_executor",
  "tool_router",
]
